# NTP

./: .dockerignore  .env.btc.example  .env.eth.example  .env.example  .env.sol.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: static-analysis.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_signal_events.py  003_position_close_reason.py  004_signal_events_bar_close.py  005_strategy_runs_parent.py
docs/: ANALYZER_RETURNS_CAVEAT.md  BAR_BACKTESTING_GOTCHAS.md  BATCH_BACKTEST.md  CONFIG.md  DATA_FETCHING.md  DEPLOY.md  LIQUIDATION_AND_SIZING.md  NT_BACKTEST_EXAMPLES.md  NT_INDICATORS_REFERENCE.md  NT_UPGRADE_NOTES.md  PAPER_TRADING_GUIDE.md  PROTECTIVE_STOP_RESTART_AUDIT.md  ROADMAP.md  SANDBOX_PARTIAL_FILL_AUDIT.md  STRATEGY_ENTRY_RULES.md  VERIFICATION.md
grafana/dashboards/: trading.json
grafana/provisioning/dashboards/: default.yml
grafana/provisioning/datasources/: postgres.yml
notebooks/: 01_verify_pipeline.ipynb  02_backtest_ema_cross.ipynb  03_backtest_macd_rsi.ipynb  04_backtest_sma_cross.ipynb  05_backtest_ema_cross_atr.ipynb  README.md  _compare_helpers.py  _validate_helpers.py  backtest_ama_cross.ipynb  backtest_bb_meanrev.ipynb  backtest_dema_cross.ipynb  backtest_donchian_breakout.ipynb  backtest_ema_cross.ipynb  backtest_ema_cross_atr.ipynb  backtest_ema_cross_bracket.ipynb  backtest_ema_cross_long_only.ipynb  backtest_ema_cross_stop_entry.ipynb  backtest_ema_cross_tp.ipynb  backtest_ema_cross_trailing.ipynb  backtest_ema_cross_trailing_stop.ipynb  backtest_hma_cross.ipynb  backtest_macd_rsi.ipynb  backtest_sma_cross.ipynb  backtest_vidya_cross.ipynb  charts.py  compare_sweeps.ipynb  paper_vs_backtest.ipynb  review_live_run.ipynb  utils.py  validate_all.ipynb  validate_strategy.ipynb  verify_01_pipeline.ipynb  verify_02_data.ipynb  verify_03_signals.ipynb  verify_04_persistence.ipynb  verify_pipeline.ipynb
notebooks/backtest/: ama_cross.ipynb  bb_meanrev.ipynb  dema_cross.ipynb  donchian_breakout.ipynb  ema_cross.ipynb  ema_cross_atr.ipynb  ema_cross_bracket.ipynb  ema_cross_long_only.ipynb  ema_cross_tp.ipynb  ema_cross_trailing_stop.ipynb  hma_cross.ipynb  ma_cross.ipynb  ma_cross_atr.ipynb  ma_cross_bracket.ipynb  ma_cross_long_only.ipynb  ma_cross_stop_entry.ipynb  ma_cross_stop_loss.ipynb  ma_cross_take_profit.ipynb  ma_cross_tp.ipynb  ma_cross_trailing_stop.ipynb  macd_rsi.ipynb  sma_cross.ipynb  vidya_cross.ipynb
notebooks/verify/: 01_pipeline.ipynb  02_data.ipynb  03_signals.ipynb
scripts/: _catalog.py  batch_backtest.py  fetch_binance_candles.py  fetch_hl_candles.py  init_grafana_user.sql  rank_sandbox_candidates.py  run_live.py  run_sandbox.py  snapshot-notebook.ps1  snapshot-notebook.sh
src/actors/: account_alive.py  alert.py  persistence.py
src/adapters/: __init__.py  patched_sandbox.py
src/backtesting/: __init__.py  analysis.py  baselines.py  engine.py  metrics.py
src/config/: settings.py
src/core/: __init__.py  constants.py  instruments.py  liquidation.py  liquidation_mixin.py  protective_stop_mixin.py  signal_event.py  sizing.py  utils.py  venues.py
src/persistence/: schema.py
src/strategies/: bb_meanrev.py  donchian_breakout.py  ema_cross.py  ema_cross_atr.py  ema_cross_bracket.py  ema_cross_long_only.py  ema_cross_stop_entry.py  ema_cross_tp.py  ema_cross_trailing.py  ema_cross_trailing_stop.py  hma_cross.py  ma_cross.py  ma_cross_atr.py  ma_cross_bracket.py  ma_cross_long_only.py  ma_cross_stop_entry.py  ma_cross_take_profit.py  ma_cross_tp.py  ma_cross_trailing_stop.py  macd_rsi.py  sma_cross.py
tests/integration/: test_native_liquidation_engine.py  test_sandbox_partial_fill.py
tests/unit/: test_actor_currency_resolution.py  test_actors.py  test_analysis.py  test_baselines.py  test_catalog.py  test_close_cause_helpers.py  test_close_reason.py  test_compare_helpers.py  test_compose_pgdata_mount.py  test_core.py  test_cross_sweep_html.py  test_engine_resolution.py  test_fills_to_markers.py  test_liquidation.py  test_liquidation_mixin.py  test_ma_cross_cross_gate.py  test_ma_cross_state_persistence.py  test_metrics.py  test_notebook_utils.py  test_patched_sandbox.py  test_protective_stop_mixin.py  test_run_strategy_wiring.py  test_runner_kernel_paths.py  test_runner_orphan_run_guard.py  test_schema.py  test_settings.py  test_signal_event.py  test_sizing.py  test_strategy_runs_parent_link.py  test_sweep_html.py  test_v2_tearsheet.py  test_validate_helpers.py
