[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nautilus-platform"
version = "0.1.0"
description = "Crypto algorithmic trading platform built on NautilusTrader"
requires-python = ">=3.12"
dependencies = [
    # Core engine — PIN THIS. Breaking changes between releases.
    # Check https://github.com/nautechsystems/nautilus_trader/releases before upgrading.
    "nautilus_trader==1.224.0",

    # API
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0",

    # Database
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "sqlalchemy>=2.0",          # For schema definition + Alembic migrations only

    # Redis
    "redis[hiredis]>=5.0",

    # Data / Analysis
    "pandas>=2.2",
    "pyarrow>=22.0.0",          # Parquet support for NT catalog

    # Config
    "pydantic>=2.10",
    "pydantic-settings>=2.6",

    # Indicators (choose one or both)
    # "TA-Lib>=0.4.32",         # Requires system-level ta-lib install
    "pandas-ta>=0.3.14b1",

    # Utilities
    "orjson>=3.10",             # Fast JSON for API responses
    "httpx>=0.28",              # HTTP client for data fetching scripts
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "ipykernel>=6.29",          # Jupyter support
    "matplotlib>=3.9",          # Plotting in notebooks
    "plotly>=5.0",               # Interactive plotting in notebooks
    "nbformat>=4.2",             # Required by Plotly for Jupyter rendering
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["notebooks", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.per-file-ignores]
# Strategies use Decimal, Bar, BarType, InstrumentId, PositiveInt at runtime (config, on_bar).
"src/strategies/*.py" = ["TC002", "TC003"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["nautilus_trader", "nautilus_trader.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "plotly", "plotly.*", "asyncpg"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["src.strategies.*", "src.actors.*"]
disable_error_code = ["misc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
